# gmudix

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  conf.h.in  configure  configure.in  gmudix.spec  gmudix.spec.in
deb/: README.debian  changelog  control  menu  rules
doc/: gmudix.txt
include/: conf.h  file.h  gui.h  mudix.h
src/: Makefile.am  Makefile.in  alias.c  commands.c  file.c  gui_alias.c  gui_capture.c  gui_character.c  gui_color.c  gui_font.c  gui_general.c  gui_macro.c  gui_main.c  gui_path.c  gui_preferences.c  gui_tab.c  gui_timer.c  gui_trigger.c  gui_user.c  gui_variable.c  history.c  log.c  macro.c  mccp.c  mudix.c  net.c  path.c  process.c  string.c  tabs.c  telnet.c  timer.c  trigger.c  user.c  variable.c
